# libsanelli

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CMakeLists.txt
include/sanelli/: CMakeLists.txt  sanelli.hpp
include/sanelli/algorithm/: CMakeLists.txt  algorithm.hpp
include/sanelli/algorithm/impl/: CMakeLists.txt  indexof.hpp
include/sanelli/automa/: CMakeLists.txt  automa.hpp
include/sanelli/automa/impl/: CMakeLists.txt  algorithm.hpp  automaton.hpp  exception.hpp  output.hpp
include/sanelli/binary/: CMakeLists.txt  binary.hpp
include/sanelli/debug/: CMakeLists.txt  debug.hpp
include/sanelli/fuzzy/: CMakeLists.txt  fuzzy.hpp
include/sanelli/fuzzy/impl/: CMakeLists.txt  operators.hpp  variable.hpp
include/sanelli/io/: CMakeLists.txt  io.hpp
include/sanelli/io/impl/: CMakeLists.txt  console_colour.hpp  containers_output.hpp
include/sanelli/math/: CMakeLists.txt  math.hpp
include/sanelli/memory/: CMakeLists.txt  memory.hpp
include/sanelli/parser/: CMakeLists.txt  parser.hpp
include/sanelli/parser/impl/: CMakeLists.txt  parser.hpp  parser_context.hpp  parser_error.hpp  parser_io.hpp
include/sanelli/regexp/: CMakeLists.txt  regexp.hpp
include/sanelli/regexp/impl/: CMakeLists.txt  algorithm.hpp
include/sanelli/shared-library/: CMakeLists.txt  shared-library.hpp
include/sanelli/string/: CMakeLists.txt  string.hpp
include/sanelli/string/impl/: CMakeLists.txt  exception.hpp  string.hpp
include/sanelli/tokenizer/: CMakeLists.txt  tokenizer.hpp
include/sanelli/tokenizer/impl/: CMakeLists.txt  token.hpp  token_io.hpp  token_provider_constructor.hpp  token_rule.hpp  tokenizer.hpp  tokenizer_error.hpp
include/sanelli/tree/: CMakeLists.txt  tree.hpp
include/sanelli/tree/impl/: node.hpp  (+4 more)
libs/: CMakeLists.txt
src/: CMakeLists.txt  sanelli.cpp
src/debug/: CMakeLists.txt  debug.cpp
src/shared-library/: CMakeLists.txt  shared-library.cpp
src/string/: CMakeLists.txt  string.cpp
test/: CMakeLists.txt
test/algorithm/: CMakeLists.txt  indexof.cpp
test/automa/: CMakeLists.txt  algorithm.cpp  output.cpp
test/binary/: CMakeLists.txt  binary.cpp
test/fuzzy/: CMakeLists.txt  fuzzy.cpp
test/io/: CMakeLists.txt  console_colour.cpp
test/math/: CMakeLists.txt  math.cpp
test/memory/: CMakeLists.txt  memory.cpp
test/parser/: CMakeLists.txt  parser.cpp
test/sanelli/: CMakeLists.txt  sanelli.cpp
test/string/: CMakeLists.txt  string.cpp
test/tokenizer/: CMakeLists.txt  tokenizer.cpp
test/tree/: CMakeLists.txt  algorithm.cpp  creation.cpp  output.cpp
